[tool.poetry]
name = "elordenador_installer"
version = "0.1.0"
description = "Install elordenador's packages"
authors = ["Daniel <danilacasito8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elordenador-lib = {url = "https://pythordenador.github.io/elordenador_lib/elordenador_lib-0.1.1.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
