[tool.poetry]
name = "elordenador_installer"
version = "0.1.0"
description = ""
authors = ["Daniel <danilacasito8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
elordenador-lib = {url = "https://pythordenador.github.io/elordenador_lib/elordenador_lib-0.1.1.tar.gz"}
requests = "^2.27.1"
clint = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
